--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-scratch
+/scratch
+/tailsocks
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,visualstudiocode,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,visualstudiocode,go
